# MyCRM

./: .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ADVANCED_FEATURES.md  ADVANCED_IMPLEMENTATION_SUMMARY.md  ADVANCED_QUICK_REFERENCE.md  ARCHITECTURE.md  BACKEND_FRONTEND_PARITY_VERIFICATION.md  CHANGELOG.md  COLLABORATION_IMPLEMENTATION_SUMMARY.md  COMPLETE_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  FEATURES.md  FEATURES_SUMMARY.md  FEATURES_TREE.txt  FINAL_REPORT.md  FRONTEND_GUIDE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FUTURISTIC_FEATURES_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_CHECKLIST.md  LEAD_SCORING_GUIDE.md  LICENSE  MULTI_TENANT_GUIDE.md  NEW_FEATURES_GUIDE.md  NEW_FEATURES_README.md  PROFESSIONAL_REVIEW.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART_FUTURISTIC_FEATURES.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_NEW_FEATURES.md  QUICK_TEST_GUIDE.md  README.md  README_TESTING.md  (+19 more)
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.production  SECURITY_CHECKLIST.md  load_test.py  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  settings_production.py  setup_collaboration.sh  setup_dev.py  setup_gdpr_compliance.sh  test_output.txt
backend/activity_feed/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/advanced_reporting/: __init__.py  admin.py  apps.py  models.py  report_models.py  report_serializers.py  report_services.py  report_urls.py  report_views.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/ai_chatbot/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/ai_insights/: admin.py  churn_predictor.py  content_generator.py  models.py  next_best_action.py  serializers.py  tests.py  urls.py  views.py
backend/ai_sales_assistant/: __init__.py  admin.py  apps.py  chatbot_engine.py  chatbot_models.py  chatbot_serializers.py  chatbot_urls.py  chatbot_views.py  engine.py  models.py  serializers.py  urls.py  views.py
backend/api/: __init__.py  apps.py  developer_models.py  urls.py
backend/app_marketplace/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/autonomous_workflow/: admin.py  apps.py  models.py  serializers.py  views.py
backend/backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py
backend/biofeedback_personalization/: admin.py  apps.py  models.py  serializers.py  views.py
backend/campaign_management/: __init__.py  admin.py  apps.py  email_models.py  models.py  serializers.py  tasks.py  urls.py  views.py
(+1020 files in other folders)
